--- a/applications/tsp/sun66.tex
+++ b/applications/tsp/sun66.tex
@@ -1,798 +1,52 @@
-\documentclass[11pt,twoside]{article}
-\pagestyle{myheadings}
-
+\documentclass[11pt,twoside,nolof,noabs]{starlink}
 %------------------------------------------------------------------------------
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocnumber}    {66.5}
-\newcommand{\stardocname}      {\stardocinitials/\stardocnumber}
-\newcommand{\stardocauthors}   {Jeremy Bailey\\
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocnumber      {66.5}
+\stardocname        {\stardocinitials/\stardocnumber}
+\stardocauthors     {Jeremy Bailey\\
                                 Anglo-Australian Observatory}
-\newcommand{\stardocdate}      {2 May 1997}
-\newcommand{\stardocversion}   {Version 2.3}
-\newcommand{\stardocmanual}    {Users' Manual}
-\newcommand{\stardoctitle}     {TSP --- A Time Series/Polarimetry Package}
+\stardocdate        {2 May 1997}
+\stardocversion     {Version 2.3}
+\stardocmanual      {Users' Manual}
+\stardoctitle       {TSP --- A Time Series/Polarimetry Package}
 %------------------------------------------------------------------------------
-
-% ? End of document identification
-% -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-1.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-%   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
-%+                              M A N . S T Y
-%
-%  Module name:
-%    MAN.STY
-%
-%  Function:
-%    Default definitions for \LaTeX\ macros used in MAN output
-%
-%  Description:
-%    As much as possible of the output from the MAN automatic manual generator
-%    uses calls to user-alterable macros rather than direct calls to built-in
-%    \LaTeX\ macros. This file contains the default definitions for these
-%    macros.
-%
-%  Language:
-%    \LaTeX
-%
-%  Support:
-%    William Lupton, {AAO}
-%-
-%  History:
-%    16-Nov-88 - WFL - Add definitions to permit hyphenation to work on
-%		 words containing special characters and in teletype fonts.
-%    21-Mar-90 - WFL - Use \makeatletter and \makeatother; tidy
-%    14-Nov-91 - WFL - Add \manroutinebreakitem that inserts a line break
-%	       after any text that appears on the initial line of the paragraph
-%    15-Nov-91 - WFL - Always put \mbox{} after \item to protect against missing
-%	       item text; remove spaces before { and [
-%    20-Aug-92 - WFL - Extra parameter to \manroutine and shunt up existing ones
-%	       (to facilitate use of \label and \ref)
-%    10-Aug-94 - WFL - Cut out "\_" definition (screws up latex2html!); added
-%	       unprocessed item name argument to \mansectionitem
-%    18-Oct-94 - WFL - Decided that changing args to macros is too naughty so
-%	       instead added new \mansectionitemA macro with the extra arg
-%    19-Jul-96 - WFL - replaced hyphenchar with DeclreFontFamily for LaTeX2e
-
-\typeout{Default MAN macros. Released 19th July 1996}
-
-% permit use of @ characters in names
-
-\makeatletter
-
-% permit hyphenation when in teletype font (support 9,10,11,12 point only -
-% could extend), define lccodes for special characters so that the hyphen-
-% ation algorithm is not switched off. Define underscore character to be
-% explicit underscore rather than lots of kerns etc.
-
-%\hyphenchar\nintt=`-\hyphenchar\tentt=`-\hyphenchar\elvtt=`-\hyphenchar\twltt=`-
-% Latex2e - tell cmtt to hyphenate
-\DeclareFontFamily{OT1}{cmtt}{\hyphenchar\font=45}
-
-% \lccode`_=`_\lccode`$=`$
-
-%\renewcommand{\_}{{\tt\char'137}}
-
-%+                      M A N _ I N T R O
-%
-%  Section name:
-%    MAN_INTRO
-%
-%  Function:
-%    Macros used in the .TEX_INTRO file
-%
-%  Description:
-%    There are no such special macros.
-%-
-
-%+                      M A N _ S U M M A R Y
-%
-%  Section name:
-%    MAN_SUMMARY
-%
-%  Function:
-%    Macros used in the .TEX_SUMMARY file
-%
-%  Description:
-%    There is a command to introduce a new section (mansection) and a list-like
-%    environment (mansectionroutines) that handles the list of routines in the
-%    current section. In addition a mansectionitem command can be used instead
-%    of the item command to introduce a new routine in the current section.
-%-
-
 \newcommand{\mansection}[2]{\subsection{#1 --- #2}}
+\newenvironment{mansectionroutines}{\begin{description}}{\end{description}}
 
-\newenvironment{mansectionroutines}{\begin{quote}\begin{description}}%
-{\end{description}\end{quote}}
 
-\newcommand{\mansectionitem}[1]{\item[#1:]\mbox{}}
+\newcommand{\mansectionitem}[1]{\item[#1:]}
 
-% This form (which wflman V2.0 generates) passes an un-processed version of the
-% section item name, useful for cross-references
-\newcommand{\mansectionitemA}[2]{\item[#1:]\mbox{}}
+\newcommand{\manroutine}[3]{\ssttitle{#1}{#2}}
+\newenvironment{manroutinedescription}{}{\par{}\rule{\textwidth}{0.5mm}}
 
-%+                      M A N _ D E S C R
-%
-%  Section name:
-%    MAN_DESCR
-%
-%  Function:
-%    Macros used in the .TEX_DESCR file
-%
-%  Description:
-%    There is a command to introduce a new routine (manroutine) and a list-like
-%    environment (manroutinedescription) that handles the list of paragraphs
-%    describing the current routine. In addition a manroutineitem or
-%    manroutinebreakitem command can be used instead of the item command to
-%    introduce a new paragraph for the current routine.
-%
-%    Two-column tables (the ones that can occur anywhere and which are
-%    triggered by "=>" as the second token on a line) are bracketed by a
-%    new environment (mantwocolumntable). Other sorts of table are introduced
-%    by relevant  environments (manparametertable, manfunctiontable and
-%    manvaluetable). The definitions of these environments call various other
-%    user-alterable commands, thus allowing considerable user control over such
-%    tables... (to be filled in when the commands have been written)
-%-
 
-\newcommand{\manrule}{\rule{\textwidth}{0.5mm}}
-
-\newcommand{\manroutine}[3]{\subsection{#1 --- #2}}
-
-\newenvironment{manroutinedescription}{\begin{description}}{\end{description}%
-\manrule}
-
-\newenvironment{mansubparameterdescription}{\begin{description}}%
-{\end{description}}
-
-\newcommand{\manroutineitem}[2]{\item[#1:] #2\mbox{}}
-
-\newcommand{\manroutinebreakitem}[2]{\item[#1:] #2\hfill\\}
+\newcommand{\manroutineitem}[2]{\subsubsection*{#1}#2\par{}}
+\newcommand{\manroutinebreakitem}[2]{\subsubsection*{#1}#2\par{}}
 
 % two column tables
-
-\newcommand{\mantwocolumncols}{||l|p{80mm}||}
-
-\newcommand{\mantwocolumntop}{\hline}
-
-\newcommand{\mantwocolumnblank}{\mantwocolumn@ss\mantwocolumn@hl%
-\gdef\mantwocolumn@hl{}\gdef\mantwocolumn@ss{}}
-
-\newcommand{\mantwocolumnbottom}{\mantwocolumn@ss\mantwocolumn@hl}
-
+\newcommand{\mantwocolumnentry}[1]{\\ #1 & }
 \newenvironment{mantwocolumntable}{%
-\hspace*{\fill}\vspace*{-\partopsep}%
 \begin{center}%
-\begin{tabular}{\mantwocolumncols}%
-\mantwocolumntop%
-\gdef\mantwocolumn@ss{}\gdef\mantwocolumn@hl{}}%
-{\mantwocolumnbottom%
-\end{tabular}%
+\begin{tabular}{||l|p{80mm}||}%
+\hline}%
+{\end{tabular}%
 \end{center}}
 
-\newcommand{\mantwocolumnentry}[1]{\mantwocolumn@ss\gdef\mantwocolumn@ss{\\}%
-\gdef\mantwocolumn@hl{\hline}#1 & }
-
 % parameter tables
+\newenvironment{manparametertable}{\begin{tabular}{lllp{80mm}}}%
+{\end{tabular}}
 
-\newcommand{\manparametercols}{lllp{80mm}}
+\newcommand{\manparameterentry}[3]{\\#1 & #2 & #3 & }
 
-\newcommand{\manparameterorder}[3]{#1 & #2 & #3 & }
-
-\newcommand{\manparametertop}{}
-
-\newcommand{\manparameterblank}{\gdef\manparameter@hl{}\gdef\manparameter@ss{}}
-
-\newcommand{\manparameterbottom}{}
-
-\newenvironment{manparametertable}{\gdef\manparameter@ss{}%
-\gdef\manparameter@hl{}\hspace*{\fill}\vspace*{-\partopsep}\begin{trivlist}%
-\item[]\begin{tabular}{\manparametercols}\manparametertop}{\manparameterbottom%
-\end{tabular}\end{trivlist}}
-
-\newcommand{\manparameterentry}[3]{\manparameter@ss\gdef\manparameter@ss{\\}%
-\gdef\manparameter@hl{\hline}\manparameterorder{#1}{#2}{#3}}
-
-% return tables
-
-\newcommand{\manreturncols}{lllp{80mm}}
-
-\newcommand{\manreturnorder}[3]{#1 & #2 & #3 & }
-
-\newcommand{\manreturntop}{}
-
-\newcommand{\manreturnblank}{\gdef\manreturn@hl{}\gdef\manreturn@ss{}}
-
-\newcommand{\manreturnbottom}{}
-
-\newenvironment{manreturntable}{\gdef\manreturn@ss{}%
-\gdef\manreturn@hl{}\hspace*{\fill}\vspace*{-\partopsep}\begin{trivlist}%
-\item[]\begin{tabular}{\manreturncols}\manreturntop}{\manreturnbottom%
-\end{tabular}\end{trivlist}}
-
-\newcommand{\manreturnentry}[3]{\manreturn@ss\gdef\manreturn@ss{\\}%
-\gdef\manreturn@hl{\hline}\manreturnorder{#1}{#2}{#3}}
-
-% function tables
-
-\newcommand{\manfunctioncols}{||l|l|p{80mm}||}
-
-\newcommand{\manfunctionorder}[2]{#1 & #2 & }
-
-\newcommand{\manfunctiontop}{\hline}
-
-\newcommand{\manfunctionblank}{\manfunction@ss\manfunction@hl%
-\gdef\manfunction@ss{}\gdef\manfunction@hl{}}
-
-\newcommand{\manfunctionbottom}{\manfunction@ss\manfunction@hl}
-
-\newenvironment{manfunctiontable}{\gdef\manfunction@ss{}\gdef\manfunction@hl{}%
-\hspace*{\fill}\vspace*{-\partopsep}\begin{center}\begin{tabular}%
-{\manfunctioncols}\manfunctiontop}{\manfunctionbottom\end{tabular}\end{center}}
-
-\newcommand{\manfunctionentry}[2]{\manfunction@ss\gdef\manfunction@ss{\\}%
-\gdef\manfunction@hl{\hline}\manfunctionorder{#1}{#2}}
-
-% value tables
-
-\newcommand{\manvaluecols}{||l|l|l|p{80mm}||}
-
-\newcommand{\manvalueorder}[3]{#1 & #2 & #3 & }
-
-\newcommand{\manvaluetop}{\hline}
-
-\newcommand{\manvalueblank}{\manvalue@ss\manvalue@hl\gdef\manvalue@ss{}%
-\gdef\manvalue@hl{}}
-
-\newcommand{\manvaluebottom}{\manvalue@ss\manvalue@hl}
-
-\newenvironment{manvaluetable}{\gdef\manvalue@ss{}\gdef\manvalue@hl{}%
-\hspace*{\fill}\vspace*{-\partopsep}\begin{center}\begin{tabular}%
-{\manvaluecols}\manvaluetop}{\manvaluebottom\end{tabular}\end{center}}
-
-\newcommand{\manvalueentry}[3]{\manvalue@ss\gdef\manvalue@ss{\\}%
-\gdef\manvalue@hl{\hline}\manvalueorder{#1}{#2}{#3}}
-
-% list environments
-
-\newenvironment{manenumerate}{\begin{enumerate}}{\end{enumerate}}
-
-\newcommand{\manenumerateitem}[1]{\item[#1]\mbox{}}
-
-\newenvironment{manitemize}{\begin{itemize}}{\end{itemize}}
-
-\newcommand{\manitemizeitem}{\item\mbox{}}
-
-\newenvironment{mandescription}{\begin{description}\begin{description}}%
-{\end{description}\end{description}}
-
-\newcommand{\mandescriptionitem}[1]{\item[#1]\mbox{}}
 
 % teletype conversion
+\providecommand{\mantt}[1]{\texttt{#1}}
 
-\newcommand{\mantt}{\tt}
-
-% "semi-verbatim" environment (modified from LaTeX source)
-
-\def\@mansemiverbatim{\trivlist\item[]\if@minipage\else\vskip\parskip\fi%
-\leftskip\@totalleftmargin\rightskip\z@%
-\parindent\z@\parfillskip\@flushglue\parskip\z@%
-\@tempswafalse\def\par{\if@tempswa\hbox{}\fi\@tempswatrue\@@par}%
-\obeylines}
-
-\def\mansemiverbatim{\@mansemiverbatim\frenchspacing\@vobeyspaces}
-
-\let\endmansemiverbatim=\endtrivlist
-
-% forbid use of @ characters in names
-
-\makeatother
-
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\renewcommand{\thepage}{\roman{page}}
+% End of document specific commands
+% -------------------------------------------------------------------------
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\textsc Rutherford Appleton Laboratory} \hfill {\textbf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\textbf \stardocversion \\ [4ex]}
-   {\Huge\textbf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\textbf Abstract}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-%\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{Introduction}
 
@@ -854,14 +108,14 @@ Make sure you have sourced the /star/etc/login and /star/etc/cshrc files (probab
 
 Type the following command at your shell prompt.
 
-\begin{verbatim}
+\begin{terminalv}
 
   csh> tsp
 
     TSP commands are now available -- (Version 2.3-0)
 
   csh>
-\end{verbatim}
+\end{terminalv}
 
 Any TSP command may now be entered. Note that on UNIX commands are case sensitive and must be entered in lower case.
 
@@ -870,7 +124,7 @@ PPLOT command to plot a polarization spectrum. The SN1987A data file is
 included with the software, so you can use this command to check that TSP
 is working.
 
-\begin{verbatim}
+\begin{terminalv}
 
     csh> pplot
     INPUT - Stokes Data to Plot> /star/bin/tsp/sn1987a
@@ -879,7 +133,7 @@ is working.
     LABEL - Label for plot> SN1987A  1987 Sep 2
     DEVICE - Plot Device> xwindows
 
-\end{verbatim}
+\end{terminalv}
 
 
 
@@ -984,9 +238,9 @@ The environment variable or logical name FIGARO\_FORMATS controls which of the t
 are used by TSP (and by Figaro)  when accessing Figaro files. It is suggested
 that this name be set up as follows:
 
-\begin{verbatim}
+\begin{terminalv}
    setenv FIGARO_FORMATS "NDF,DST"
-\end{verbatim}
+\end{terminalv}
 
 
 Which will make the NDF format the default, but will also allow DST files to
@@ -1066,7 +320,7 @@ of the O and E modes of the calcite. Images of this type are recorded for
 the two Pockels cell states (referred to as A and B). In the case of IPCS data
 a single image contains both Pockels cell states. For CCD data two separate
 images are taken, one in each state. For a more detailed description of
-the instrument and its operation see McLean et al. (MNRAS {\bf 209}, 655,
+the instrument and its operation see McLean et al. (MNRAS \textbf{209}, 655,
 1984), and the AAO spectropolarimetry manual (AAO UM 24).
 
 A typical observing sequence would consist of observations of the
@@ -1699,7 +953,7 @@ such as DAT\_CREAT and DAT\_ASSOC, and also DAT\_ANNUL. Below is an example
 of an ADAM A-task that makes a copy of a TSP data structure using the routine
 TSP\_COPY
 
-\begin{verbatim}
+\begin{terminalv}
 
 
       SUBROUTINE COPY(STATUS)
@@ -1721,22 +975,22 @@ TSP\_COPY
 
       END
 
-\end{verbatim}
+\end{terminalv}
 
 Such a program could be linked with the command
 
-\begin{verbatim}
+\begin{terminalv}
 
   alink copy `tsp_link_adam`
-\end{verbatim}
+\end{terminalv}
 on UNIX systems, and
 
 
-\begin{verbatim}
+\begin{terminalv}
 
  $ ALINK COPY,TSP_DIR:TSPSUBS
 
-\end{verbatim}
+\end{terminalv}
 on VAX/VMS systems.
 
 \section{New Features in TSP version 2.3}
@@ -2109,7 +1363,6 @@ Polarimeter.
 
 
 \newpage
-
 \section{Detailed Command Descriptions}
 
 These command descriptions (and the TSPSUBS descriptions) were generated from
@@ -4772,6 +4025,7 @@ be
 \manparameterentry{{\mantt{!}}}{{\mantt{STATUS}}}{Integer,ref} The Status
 
 \end{manparametertable}
+
 \manroutineitem{External subroutines / functions used}{}
      Various {\mantt{NDF}} routines,
      {\mantt{TSP\_{}SIZE}}
@@ -4798,6 +4052,7 @@ structure
 
 \manroutineitem{Parameters}{(``{\mantt{>}}'' input, ``{\mantt{!}}'' modified, `%
 `W'' workspace, ``{\mantt{<}}'' output)}
+
 \begin{manparametertable}
 \manparameterentry{{\mantt{>}}}{{\mantt{LOC}}}{Fixed string,descr} A locator %
 to the
